4.0/en/0x23-V18-API.md
# V18: API and Web Service Verification Requirements

## Control Objective

Ensure that a verified application that uses a server-side API (commonly using JSON or XML or GraphQL) has:

* Adequate authentication, session management and authorization of all web services.
* Input validation of all parameters that transit from a lower to higher trust level.
* Basic interoperability of SOAP web services layer to promote API use.

Previous requirements in this standard apply to APIs as well (access control, security in transit, etc.)

## Security Verification Requirements

| # | Description | L1 | L2 | L3 | Since |
| --- | --- | --- | --- | -- | -- |
| **18.1** | Verify that the same encoding style is used between the client and the server. | ✓ | ✓ | ✓ | 3.0 |
| **18.2** | Verify that suitable generic error messages are returned when in production mode, so as to not leak sensitive debug information. | ✓ | ✓ | ✓ | 4.0 |
| **18.3** | Verify that access to administration and management functions within the Web Service Application is limited to web service administrators. | ✓ | ✓ | ✓ | 3.0 |
| **18.4** | Verify that XML or JSON schema is in place and verified before accepting input. | ✓ | ✓ | ✓ | 3.0 |
| **18.5** | Verify that all received input meets service type/length/range and format. | ✓ | ✓ | ✓ | 3.0 |
| **18.6** | Verify that all received input, before processed, is sanitised accordingly to ensure it is safe to handle. | ✓ | ✓ | ✓ | 4.0 |
| **18.7** | Verify that SOAP based web services are compliant with Web Services-Interoperability (WS-I) Basic Profile at minimum. This essentially means TLS encryption.  | ✓ | ✓ | ✓ | 3.0.1 |
| **18.8** | Verify that the REST service is protected from Cross-Site Request Forgery via the use of at least one or more of the following: double submit cookie pattern, CSRF nonces, ORIGIN request header checks, and referrer request header checks. | ✓ | ✓ | ✓ | 3.0.1 |
| **18.9** | Verify the REST service explicitly check the incoming Content-Type to be the expected one, such as application/xml or application/JSON. |  | ✓ | ✓ | 3.0 |
| **18.10** | Verify that the message payload is signed to ensure reliable transport between client and service, using JSON Web Signing or WS-Security for SOAP requests. |  | ✓ | ✓ | 3.0.1 |
| **18.11** | Verify that alternative and less secure access paths do not exist. |  | ✓ | ✓ | 3.0 |
| **18.12** | Verify that authorization decisions should be at both the URI and resource level, not just at the resource level. |  | ✓ | ✓ | 3.0 |
| **18.13** | If GraphQL is used, to prevent DoS as a result of expensive, nested queries, query whitelisting or a combination of depth limiting and amount limiting should be used. For more advanced scenarios, query cost analysis should be used. |  | ✓ | ✓ | 3.0 |
| **18.14** | If GraphQL is used, authorization logic should be implemented at the business logic layer instead of the GraphQL layer. |  | ✓ | ✓ | 3.0 |
| **18.15** | If no access control is present, verify that the REST service isn't susceptible to excessive calls, which could lead to increased overhead or CPU/bandwidth bills. A potential solution could be API keys, or returning error code 429 "Too Many Requests" if requests are excessive. |  | ✓ | ✓ | 4.0 |
| **18.16** | Verify that requests containing unexpected or missing content types are rejected with appropriate headers (HTTP response status 406 Unacceptable or 415 Unsupported Media Type). |  | ✓ | ✓ | 4.0 |
| **18.17** | Verify that logging is performed for all security-related events. |  |  | ✓ | 4.0 |


## References

For more information, see also:

* [OWASP Testing Guide 4.0: Configuration and Deployment Management Testing](https://www.owasp.org/index.php/Testing_for_configuration_management)
* [OWASP Cross-Site Request Forgery cheat sheet](https://www.owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)_Prevention_Cheat_Sheet)
* [JSON Web Tokens (and Signing)](https://jwt.io/)
* [REST Security Cheat Sheet] (https://www.owasp.org/index.php/REST_Security_Cheat_Sheet)
